# AI-Native-MCP-Server

./: .gitignore  README.md
backend/: .env.example  mcp_server.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/models/: __init__.py  business_schema.py  enums.py  requests.py
backend/app/api/routes/: chat.py  generation.py  schema.py  upload.py
backend/app/core/: api_deriver.py  chat_engine.py  file_writer.py  generator.py  schema_inferrer.py  zip_packer.py
backend/app/db/: session.py
backend/app/models/: project.py
backend/app/templates/base/: app.js.j2  app.wxss.j2  page-meta.json.j2  project.config.json.j2
backend/app/templates/restaurant/: app.json.j2
backend/app/templates/restaurant/packageDetail/pages/address-editor/: index.js.j2  index.json.j2  index.wxml.j2  index.wxss.j2
backend/app/templates/restaurant/packageDetail/pages/sku-picker/: index.js.j2  index.json.j2  index.wxml.j2  index.wxss.j2
backend/app/templates/restaurant/pages/home/: home.js.j2  home.json.j2  home.wxml.j2  home.wxss.j2
backend/app/templates/restaurant/skills/restaurant-skill/: SKILL.md.j2  index.js.j2  mcp.json.j2
backend/app/templates/restaurant/skills/restaurant-skill/apis/: api-base.js.j2
backend/app/templates/restaurant/skills/restaurant-skill/components/cart-summary-card/: index.js.j2  index.wxml.j2  index.wxss.j2
backend/app/templates/restaurant/skills/restaurant-skill/utils/: id-generator.js.j2  seed.js.j2  storage.js.j2  validation.js.j2
(+27 files in other folders)
